# Model_Finetuning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  scripts.sh  start_chat.sh  status_chat.sh  stop_chat.sh
data/: README.md
docs/: README.md  vibecoder-tuning-playbook.md
scripts/data_prep/: clip_long_examples.py  len_clip.py  len_scan.py  merge_and_split.py  qc_and_dedupe.py
scripts/data_prep/actual_code/: git_to_sft.py  harvest_all.py  repo2fim.py
scripts/data_prep/claude_logs/: claude2sft.py  claude2sft_follow.py  peek_sft.py
scripts/serving/: chat.html  setup_webui.sh  setup_webui_simple.sh
scripts/testing/: baseline.py  check_lengths.py  compare_baseline_vs_lora.py  model_testing.py  sft_initial_test.py
scripts/training/: merge_lora.py  sft_qlora_4bit.py  sft_qlora_8bit.py
